# rif-rollup-tx-simulator

./: Cargo.toml  LICENSE  config.toml
src/: cli.rs  config.rs  main.rs  throttler.rs  transaction.rs
src/rollup/: mod.rs  provider.rs
src/rollup/types/: mod.rs  serde_wrappers.rs
