[package]
name = "simulation-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = { version = "0.7" }
rand = { version = "0.8"}
thiserror = { version = "1"}
tokio = { version = "1", features = ["full"]}
async-trait = {version =  "0.1"}
ethers = { version = "2"}
num = { version = "0.4"}
